--- a/src/app/App.css
+++ b/src/app/App.css
@@ -4,13 +4,22 @@
   padding: 16px 35px;
   color: #fff;
   border-radius: 500px;
-  font-size: 13px;
-  font-weight: bold;
+  font-size: 15px;
+  font-weight: normal;
   cursor: pointer;
   text-transform: uppercase;
+  font-family: Helvetica;
+
 }
 
 .btn-outline {
   background-color: transparent;
   border: 2px solid #fff;
+}
+
+@media (max-width:500px) {
+  .btn-outline, .btn {
+    padding: 10px 20px;
+    text-wrap: nowrap;
+  }
 }
