--- a/src/components/Header/PremiumPageHeader.css
+++ b/src/components/Header/PremiumPageHeader.css
@@ -1,5 +1,5 @@
 .header {
-    height: 4rem;
+    min-height: 4rem;
     background-color: #333333;
     /* color: brown; */
     display: flex;
@@ -8,11 +8,15 @@
     padding: 0 var(--app-general-padding);
 }
 
+.menu {
+    position: relative;
+}
 
 .menu ul {
     list-style-type: none;
     display: flex;
     gap: 1.5rem;
+
 }
 
 .menu ul li a {
@@ -21,9 +25,40 @@
     font-weight: 500;
     font-size: 1rem;
     padding: 5px;
+    text-wrap: nowrap;
 }
 
 .menu ul li .active a {
     color: #D9DADC;
+}
+
+.menu-icon {
+    display: none;
+}
+
+@media (max-width:500px){
+    .menu-icon {
+        display: block;
+    }
+
+    .menu ul {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        left: -250px;
+        right: 0;
+        top: 10px;
+        background-color: #333333;
+        padding: 0 var(--app-general-padding);
+        
+    }
+
+    .menu ul .mobile {
+        display: block;
+    }
+
+    .menu ul li {
+        padding: 10px 0px;
+    }
 }
 
