--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -30,3 +30,20 @@
     gap: 10px;
     margin-bottom: 40px;
 }
+
+@media (max-width:500px) {
+    .title {
+        font-size: 2rem;
+        
+    }
+    
+    .description {
+        font-size: 1rem;
+    }
+
+    .buttonGroup {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+}
